# InvertedPendulum

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
.github/: .PULL_REQUEST_TEMPLATE.md.un~  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md~
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-checks.yml  tdd-ci.yml
Adorobo/Adorobo-Inverted-Pendulum/: .cproject  .project  Adorobo-Inverted-Pendulum Debug.launch  Adorobo-Inverted-Pendulum.ioc
Adorobo/InvertedPendulum-STM32-SystemIdentification/: .cproject  InvertedPendulum-STM32-SystemIdentification.ioc
InvertedPendulum-ESP32/: .gitignore  README.md  platformio.ini
InvertedPendulum-ESP32/src/: main.cpp
InvertedPendulum-STM32/: .clang-format  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  InvertedPendulum-STM32.ioc  ]  build.ninja  build_pc.sh  dummy.js  format.ps1  format.sh  startup_stm32f303x8.s
InvertedPendulum-STM32-SystemIdentification/: ..gitignore.un~  .project  InvertedPendulum-STM32-SystemIdentification Debug.launch  InvertedPendulum-STM32-SystemIdentification.ioc
InvertedPendulum-STM32/build_pc/: CMakeLists.txt  InvertedPendulum-PC-Tests
KiCad/: ESP_C3.kicad_sch  New_Library.kicad_sym  STM_F303K8.kicad_sch  adorobo_kitagami.kicad_pcb  adorobo_kitagami.kicad_pro  adorobo_kitagami.kicad_sch  revisions.md
KiCad/SB34AFC/: part_info.txt
MATLAB/: BLESample.m  ControlSystemTunerSession.mat  Controller.slx  InvertedPendulum.slx  feedback_controller.slx  lqr_sample.m
inference-onnx/: Cargo.toml
inverted-pendulum-stm32/: Cargo.toml  Embed.toml
(+753 files in other folders)
